--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,7 @@
 @tailwind utilities;
 
 * {
-  @apply transition-colors duration-400
-  /* color: var(--foreground); */
-  /* background: var(--background); */
-  /* font-family: Arial, Helvetica, sans-serif; */;
+  @apply transition-colors duration-400;
 }
 
 @layer utilities {
